tests/base/parser/bad/exps/exp_t-cid-period-cid-with.scilexp
Arbitrary.Constructor =mal_arguments
